force-app/main/default/objects/Activity/fields/Call_Hanged_Up_By__c.field-meta.xml
<CustomField>
    <fullName>Call_Hanged_Up_By__c</fullName>
    <label>Call Hanged Up By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>