force-app/main/default/objects/Activity/fields/Call_Recording__c.field-meta.xml
<CustomField>
    <fullName>Call_Recording__c</fullName>
    <formula>HYPERLINK( callRecording__c , &quot;Download Call Recording&quot;,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Recording</label>
    <type>Text</type>
</CustomField>