force-app/main/default/objects/Activity/fields/callEndTime__c.field-meta.xml
<CustomField>
    <fullName>callEndTime__c</fullName>
    <label>Call End Time</label>
    <type>DateTime</type>
</CustomField>