force-app/main/default/objects/Activity/fields/callRecording__c.field-meta.xml
<CustomField>
    <fullName>callRecording__c</fullName>
    <label>callRecording</label>
    <length>255</length>
    <type>Text</type>
</CustomField>