force-app/main/default/objects/Activity/fields/CallSID__c.field-meta.xml
<CustomField>
    <fullName>CallSID__c</fullName>
    <label>CallSID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>