force-app/main/default/objects/Activity/fields/CallStartTime__c.field-meta.xml
<CustomField>
    <fullName>CallStartTime__c</fullName>
    <label>CallStartTime</label>
    <type>DateTime</type>
</CustomField>