force-app/main/default/objects/Activity/fields/recording_url__c.field-meta.xml
<CustomField>
    <fullName>recording_url__c</fullName>
    <label>recording_url</label>
    <type>Url</type>
</CustomField>